@@ -10,6 +10,7 @@
 
 
 Version 4.2.x CA
+ - Added: Notes Input field, also if the Notes, Enumeration, or Locality fields are empty, the line is completely removed in the Shared note. (windmillway)
  - Added: Language file lang.en.php to GEDFact_assistant/languages/ (windmillway)
  - Changed: Moved Main Javascript Functions to PHP file (GEDFact_assistant/_CENS/js/census_5_input.js.php) deleted old file (windmillway)
  - Changed: Corrected JavaScript problem with "Head of Family" Names containing double quotes (Nickname etc) (windmillway)
